--- a/report/reqspec.tex
+++ b/report/reqspec.tex
@@ -28,7 +28,7 @@
 \textbf{PRIORITY:} Medium \\
 \textbf{DESC:}   \\
 \textbf{DEP:} N/A
-\paragraph{FR6 - Multiple Classifier Configurations}
+\paragraph*{FR6 - Multiple Classifier Configurations}
 \textbf{ID:} FR6 \\
 \textbf{TITLE:} Multiple Classifier Configurations \\
 \textbf{PRIORITY:} Medium \\
