--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -636,3 +636,14 @@ month={July}
   pages={2825--2830},
   year={2011}
 }
+
+@inproceedings{kohavi1995study,
+  title={A study of cross-validation and bootstrap for accuracy estimation and model selection},
+  author={Kohavi, Ron and others},
+  booktitle={Ijcai},
+  volume={14},
+  number={2},
+  pages={1137--1145},
+  year={1995},
+  organization={Montreal, Canada}
+}
