--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -647,3 +647,19 @@ month={July}
   year={1995},
   organization={Montreal, Canada}
 }
+
+@incollection{refaeilzadeh2009cross,
+  title={Cross-validation},
+  author={Refaeilzadeh, Payam and Tang, Lei and Liu, Huan},
+  booktitle={Encyclopedia of database systems},
+  pages={532--538},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
+}
